--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,23 +10,33 @@
  * governing permissions and limitations under the License.
  */
 
-  /* fallback font for Open Sans (normal - 400) */
-  @font-face {
-    font-family: "open-sans-normal-400-fallback";
-    font-style: normal;
-    font-weight: 400;
-    size-adjust: 107%;
-    src: local("Arial");
-  }
+ @font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-stretch: 100%;
+  font-display: swap;
+  src: url('/fonts/OpenSans-normal-400.woff2') format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
-   /* fallback font for Open Sans (italic - 400) */
-   @font-face {
-    font-family: "open-sans-italic-400-fallback";
-    font-style: italic;
-    font-weight: 400;
-    size-adjust: 99.1%;
-    src: local("Arial");
-  }
+/* fallback font for Open Sans (normal - 400) */
+@font-face {
+  font-family: "open-sans-normal-400-fallback";
+  font-style: normal;
+  font-weight: 400;
+  size-adjust: 107%;
+  src: local("Arial");
+}
+
+  /* fallback font for Open Sans (italic - 400) */
+  @font-face {
+  font-family: "open-sans-italic-400-fallback";
+  font-style: italic;
+  font-weight: 400;
+  size-adjust: 99.1%;
+  src: local("Arial");
+}
 
  :root {
   /* colors */
