--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,16 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-stretch: 100%;
+  font-display: swap;
+  src: url('/fonts/OpenSans-normal-700.woff2') format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
  :root {
   /* colors */
   --link-color: #0074AF;
@@ -94,6 +104,7 @@ h4, h5, h6 {
   margin-bottom: .5em;
   scroll-margin: calc(var(--nav-height) + 1em);
   color: var(--text-blue);
+  letter-spacing: -1.79px;
 }
 
 h1 { font-size: var(--heading-font-size-xxl) }
