--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -10,266 +10,124 @@ header nav {
   box-sizing: border-box;
   display: grid;
   grid-template:
-    'hamburger brand tools' var(--nav-height)
-    'sections sections sections' 1fr / auto 1fr auto;
-  align-items: center;
+  'brand extra extra' 50px
+  'brand sections sections' 1fr;
+  align-items: start;
+  justify-content: space-between;
   gap: 0 2em;
   margin: auto;
-  max-width: 1264px;
+  max-width: 1260px;
   height: var(--nav-height);
-  padding: 0 1rem;
   font-family: var(--body-font-family);
 }
 
-header nav[aria-expanded="true"] {
+/* header nav[aria-expanded="true"] {
   grid-template:
     'hamburger brand' var(--nav-height)
     'sections sections' 1fr
     'tools tools' var(--nav-height) / auto 1fr;
   overflow-y: auto;
   min-height: 100vh;
-}
+} */
 
-@media (min-width: 600px) {
-  header nav {
-    padding: 0 2rem;
-  }
-}
-
-@media (min-width: 900px) {
-  header nav {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  header nav[aria-expanded="true"] {
-    min-height: 0;
-    overflow: visible;
-  }
-}
-
-header nav p {
-  margin: 0;
-  line-height: 1;
+header nav ul {
+  display: flex;
+  font-weight: 700;
+  list-style: none;
+  justify-content: end;
+  margin: 12px 0;
 }
 
 header nav a:any-link {
-  color: currentcolor;
+  text-decoration: none;
 }
 
-/* hamburger */
-header nav .nav-hamburger {
-  grid-area: hamburger;
-  height: 22px;
-  display: flex;
-  align-items: center;
-}
-
-header nav .nav-hamburger button {
-  height: 22px;
-  margin: 0;
-  border: 0;
-  border-radius: 0;
-  padding: 0;
-  background-color: var(--background-color);
-  color: inherit;
-  overflow: initial;
-  text-overflow: initial;
-  white-space: initial;
-}
-
-header nav .nav-hamburger-icon,
-header nav .nav-hamburger-icon::before,
-header nav .nav-hamburger-icon::after {
-  box-sizing: border-box;
-  display: block;
-  position: relative;
-  width: 20px;
-}
-
-header nav .nav-hamburger-icon::before,
-header nav .nav-hamburger-icon::after {
-  content: '';
-  position: absolute;
-  background: currentcolor;
-}
-
-header nav[aria-expanded="false"] .nav-hamburger-icon,
-header nav[aria-expanded="false"] .nav-hamburger-icon::before,
-header nav[aria-expanded="false"] .nav-hamburger-icon::after {
-  height: 2px;
-  border-radius: 2px;
-  background: currentcolor;
-}
-
-header nav[aria-expanded="false"] .nav-hamburger-icon::before {
-  top: -6px;
-}
-
-header nav[aria-expanded="false"] .nav-hamburger-icon::after {
-  top: 6px;
-}
-
-header nav[aria-expanded="true"] .nav-hamburger-icon {
-  height: 22px;
-}
-
-header nav[aria-expanded="true"] .nav-hamburger-icon::before,
-header nav[aria-expanded="true"] .nav-hamburger-icon::after {
-  top: 3px;
-  left: 1px;
-  transform: rotate(45deg);
-  transform-origin: 2px 1px;
-  width: 24px;
-  height: 2px;
-  border-radius: 2px;
-}
-
-header nav[aria-expanded="true"] .nav-hamburger-icon::after {
-  top: unset;
-  bottom: 3px;
-  transform: rotate(-45deg);
-}
-
-@media (min-width: 900px) {
-  header nav .nav-hamburger {
-    display: none;
-    visibility: hidden;
-  }
-}
-
-/* brand */
-header .nav-brand {
+.nav-brand {
   grid-area: brand;
-  flex-basis: 128px;
-  font-size: var(--heading-font-size-s);
-  font-weight: 700;
-  line-height: 1;
+  align-self: end;
 }
 
-header nav .nav-brand img {
-  width: 128px;
+.nav-brand img {
+  width: 212px;
   height: auto;
+  translate: -7px -5px;
 }
 
-/* sections */
-header nav .nav-sections {
-  grid-area: sections;
-  flex: 1 1 auto;
+.nav-extra {
+  grid-area: extra;
+  height: 45px;
+  font-size: var(--body-font-size-xs);
+  padding: 0 10px;
+}
+
+.nav-extra li {
+  margin: 8px 22px 11px 0;
+}
+
+.nav-extra li:last-of-type {
+  margin-right: 0;
+}
+
+.nav-extra a:any-link {
+  color: var(--text-pink);
+}
+
+.nav-extra a:hover {
+  border-bottom: 2px solid var(--text-pink);
+}
+
+.nav-extra ul li {
+  position: relative;
+}
+
+.nav-extra ul li ul {
   display: none;
-  visibility: hidden;
-  background-color: var(--overlay-color);
+  position: absolute;
+  left: 40px;
+  top: 10px;
+  margin-left: -55px;
+  padding: 5px;
+  font-size: 14px;
+  padding: 12px 16px 12px 16px;
+  z-index: 9;
+  color: #231F20;
+  line-height: 18px;
+  overflow: hidden;
+  box-shadow: 0px -3px 8px #0000001a;
+  border-radius: 16px;
+  font-weight: 400;
+  background-color: var(--background-color);
+  width: 267px;
+  line-height: 22px;
 }
 
-header nav[aria-expanded="true"] .nav-sections {
-  display: block;
-  visibility: visible;
-  align-self: start;
+.nav-extra ul li:hover ul {
+  display: unset;
 }
 
-header nav .nav-sections ul  {
-  list-style: none;
-  padding-left: 0;
-  font-size: var(--body-font-size-s);
-  font-weight: 500;
+.nav-extra ul li ul a:any-link {
+  color: var(--link-color);
 }
 
-header nav .nav-sections ul > li {
-  font-weight: 700;
+.nav-sections {
+  grid-area: sections;
+  font-size: var(--body-font-size-m);
+  padding: 0 10px;
 }
 
-header nav .nav-sections ul > li > ul {
-  margin-top: 0;
+.nav-sections a:hover {
+  border-bottom: 2px solid var(--link-hover-color);
 }
 
-header nav .nav-sections ul > li > ul > li {
-  font-weight: 500;
+.nav-sections li {
+  padding: 0 16px 0 12px;
 }
 
-@media (min-width: 900px) {
-  header nav .nav-sections {
-    display: block;
-    visibility: visible;
-    white-space: nowrap;
-  }
-
-  header nav[aria-expanded="true"] .nav-sections {
-    align-self: unset;
-  }
-
-  header nav .nav-sections .nav-drop {
-    position: relative;
-    padding-right: 16px;
-    cursor: pointer;
-  }
-
-  header nav .nav-sections .nav-drop::after {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    top: .5em;
-    right: 2px;
-    transform: rotate(135deg);
-    width: 6px;
-    height: 6px;
-    border: 2px solid currentcolor;
-    border-radius: 0 1px 0 0;
-    border-width: 2px 2px 0 0;
-  }
-
-  header nav .nav-sections .nav-drop[aria-expanded="true"]::after {
-    top: unset;
-    bottom: .5em;
-    transform: rotate(315deg);
-  }
-
-  header nav .nav-sections ul {
-    display: flex;
-    gap: 2em;
-    margin: 0;
-    font-size: var(--body-font-size-xs);
-  }
-
-  header nav .nav-sections > ul > li {
-    flex: 0 1 auto;
-    position: relative;
-    font-weight: 500;
-  }
-
-  header nav .nav-sections > ul > li > ul {
-    display: none;
-    position: relative;
-  }
-
-  header nav .nav-sections > ul > li[aria-expanded="true"] > ul {
-    display: block;
-    position: absolute;
-    left: -1em;
-    width: 200px;
-    margin-top: 12px;
-    padding: 1em;
-    background-color: var(--highlight-background-color);
-    white-space: initial;
-  }
-
-  header nav .nav-sections > ul > li > ul::before {
-    content: '';
-    position: absolute;
-    top: -8px;
-    left: 8px;
-    width: 0;
-    height: 0;
-    border-left: 8px solid transparent;
-    border-right: 8px solid transparent;
-    border-bottom: 8px solid var(--highlight-background-color);
-  }
-
-  header nav .nav-sections > ul > li > ul > li {
-    padding: 8px 0;
-  }
+.nav-sections li:last-of-type {
+  padding-right: 0;
 }
 
-/* tools */
-header nav .nav-tools {
+.nav-tools {
   grid-area: tools;
+  display: none;
 }
