--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -91,10 +91,9 @@ header nav a:any-link {
   top: 10px;
   margin-left: -55px;
   font-size: 14px;
-  padding: 12px 16px 12px 16px;
+  padding: 12px 16px;
   z-index: 9;
   color: #231F20;
-  line-height: 18px;
   overflow: hidden;
   box-shadow: 0 -3px 8px #0000001a;
   border-radius: 16px;
