Fixing the linter

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,13 +1,13 @@
 footer {
   font-size: var(--body-font-size-s);
   background-color: #1b1b1b;
-  color: #ffffff;
+  color: #fff;
   display: block;
   margin: 0;
 }
 
 footer .footer {
-  background-image: url(/icons/footer-bg.svg);
+  background-image: url("/icons/footer-bg.svg");
   background-repeat: no-repeat;
   background-position: bottom right;
   padding: 0 10px 10px;
@@ -19,8 +19,7 @@ footer .footer p {
 
 .footer > div > div {
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
+  flex-flow: row nowrap;
 }
 
 .footer ul {
@@ -85,10 +84,6 @@ footer .footer p {
   }
 }
 
-@media (min-width: 1190px) {
-
-}
-
 @media (max-width: 991px) {
   footer .footer {
     padding: 0 0 10px;
@@ -98,12 +93,11 @@ footer .footer p {
   .footer > div > div {
     padding: 0 25px !important;
     display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
+    flex-flow: column nowrap;
   }
 
   .footer ul {
-    padding: 0px;
+    padding: 0;
   }
 
   .footer ul:nth-child(1) {
