--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,6 +45,7 @@
   --text-blue: #0074AF;
   --text-pink: #A60063;
   --button-bg-color: #0071B7;
+  --footer-bg-color: #1B1B1B;
 
   /* fonts */
   --body-font-family: 'Open Sans', 'open-sans-normal-400-fallback', arial, sans-serif;
