--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -56,7 +56,7 @@ header nav a:any-link {
 .nav-extra {
   grid-area: extra;
   height: 45px;
-  font-size: var(--body-font-size-xs);
+  font-size: var(--nav-font-size-s);
   padding: 0 10px;
 }
 
@@ -117,7 +117,7 @@ header nav a:any-link {
 
 .nav-sections {
   grid-area: sections;
-  font-size: var(--body-font-size-m);
+  font-size: var(--nav-font-size-m);
   padding: 0 10px;
 }
 
