--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,19 +64,28 @@
   --heading-font-size-s: 14px;
   --heading-font-size-xs: 12px;
 
-  /* nav height */
+  /* nav */
   --nav-height: 108px;
+  --nav-font-size-m: 16px;
+  --nav-font-size-s: 14px;
 
 }
 
 @media (min-width: 900px) {
   :root {
+    --heading-font-size-xxl: 40px;
+    --heading-font-size-xl: 40px;
+    --body-font-size-l: 24px;
+    --body-font-size-m: 20px;
+    --body-font-size-s: 16px;
+    --body-font-size-xs: 14px;
+    --nav-height: 105px;
+  }
+
+  .home {
     --heading-font-size-xxl: 56px;
     --heading-font-size-xl: 48px;
     --heading-font-size-m: 20px;
-    --heading-font-size-s: 14px;
-    --heading-font-size-xs: 12px;
-    --nav-height: 105px;
   }
 }
 
@@ -107,11 +116,17 @@ h4, h5, h6 {
   margin-bottom: .5em;
   scroll-margin: calc(var(--nav-height) + 1em);
   color: var(--text-blue);
-  letter-spacing: -1.79px;
 }
 
-h1 { font-size: var(--heading-font-size-xxl) }
-h2 { font-size: var(--heading-font-size-xl) }
+h1 { 
+  font-size: var(--heading-font-size-xxl);
+  letter-spacing: -1.54px;
+}
+
+h2 { 
+  font-size: var(--heading-font-size-xl);
+  letter-spacing: -1.79px;
+}
 h3 { font-size: var(--heading-font-size-m) }
 h4 { font-size: var(--heading-font-size-s) }
 
@@ -126,8 +141,8 @@ h4 { font-size: var(--heading-font-size-s) }
 }
 
 p, dl, ol, ul, pre, blockquote {
-  margin-top: 1em;
-  margin-bottom: 1em;
+  margin-top: 22px;
+  margin-bottom: 22px;
 }
 
 hr {
@@ -169,10 +184,14 @@ a:hover {
 }
 
 /* buttons */
+.button-container {
+  margin-top: 40px;
+}
+
 a.button:any-link, button {
   background-color: var(--button-bg-color);
   color: var(--text-white);
-  font-size: 1.6rem;
+  font-size: var(--body-font-size-s);
   padding: 12px 24px;
   border-radius: 8px 24px;
   letter-spacing: -0.16px;
@@ -251,16 +270,6 @@ main img {
 .icon svg {
   height: 100%;
   width: 100%;
-}
-
-main .section {
-  padding: 64px 16px;
-}
-
-@media (min-width: 600px) {
-  main .section {
-    padding: 64px 32px;
-  }
 }
 
 @media (min-width: 900px) {
