--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,5 @@
 footer {
-  font-size: var(--body-font-size-s);
+  font-size: var(--body-font-size-m);
   background-color: var(--footer-bg-color);
   color: var(--text-white);
   display: block;
@@ -22,6 +22,8 @@ footer .footer p {
   flex-flow: row nowrap;
   margin: 0 auto;
   max-width: 1260px;
+  padding-bottom: 50px;
+  position: relative;
 }
 
 .footer ul {
@@ -34,11 +36,44 @@ footer .footer p {
   margin-bottom: 17px;
 }
 
+.footer ul:nth-child(1) {
+  padding: 40px 40px 0 0;
+  max-width: 300px;
+}
+
 .footer ul:nth-child(1) li {
   color: #86878A;
   line-height: 20px;
   margin-bottom: 15px;
-  font-size: 1.2rem;
+  padding-bottom: 5px;
+  font-size: 12px;
+  text-shadow: none;
+}
+
+.footer ul:nth-child(1) li:nth-child(1) {
+  max-width: 230px;
+  padding: 0 0 24px;
+  width: 100%;
+  margin:0;
+  text-align: center;
+  position: relative;
+}
+
+.footer ul:nth-child(1) li:nth-child(1) picture {
+  width: 100%;
+  display: inline-block;
+  vertical-align: middle;
+  border: 0;
+  height: 55.688px;
+}
+
+.footer ul:nth-child(1) li:nth-child(2) {
+  padding-right: 35px;
+}
+
+.footer ul:nth-child(1) li:nth-child(4) {
+  padding-bottom: 0;
+  margin-bottom: 5px;
 }
 
 .footer ul li .icon {
@@ -57,17 +92,24 @@ footer .footer p {
   color: #fff;
   text-decoration: none;
   text-align: left;
-  margin: 10px 0;
   font-family: inherit;
-  font-size: 1.2rem;
-  line-height: 1.2rem;
+  font-size: 16px;
+  line-height: 22px;
+  display: inline-block;
   cursor: pointer;
   background-color: transparent;
 }
 
+.footer li strong {
+  text-decoration: none;
+}
+
+.footer a:any-link {
+  border-bottom: 2px solid transparent;
+}
+
 .footer a:hover {
   border-bottom: 2px solid #fff;
-  padding-bottom: 5px;
 }
 
 @media (min-width: 900px){
@@ -76,13 +118,16 @@ footer .footer p {
   }
 
   .footer ul {
-    padding-top: 75px;
     max-width: 340px;
-    padding-right: 40px;
+    padding: 75px 0 0 25px;
   }
 
   .footer ul:nth-child(1){
     padding-top: 40px;
+  }
+
+  .footer ul:nth-child(2) {
+    padding: 75px 10% 0 25px;
   }
 }
 
@@ -104,6 +149,7 @@ footer .footer p {
 
   .footer ul:nth-child(1) {
     margin-top: 24px;
+    padding: 0;
   }
 
   .footer ul:nth-child(1) li:nth-child(4) {
