--- a/styles/styles.css
+++ b/styles/styles.css
@@ -290,3 +290,53 @@ main img {
 main .section.highlight {
   background-color: var(--highlight-background-color);
 }
+
+.section.wheretofind {
+    max-width: 1046px;
+    margin: 0 auto;
+}
+
+.section.wheretofind .default-content-wrapper {
+    text-align: center;
+}
+
+.section.wheretofind ul {
+  display: flex;
+  flex-flow: row;
+  list-style-type: none;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0;
+  margin-top: 22px;
+}
+
+.section.wheretofind > div {
+  padding:0;
+}
+
+.section.wheretofind li {
+  width: 33.3333%;
+}
+
+.section.wheretofind ul li .icon {
+  width: 333px;
+  height: 100%;
+  border-radius: 8px;
+  background-color: var(--text-white);
+}
+
+.section.wheretofind ul li .icon svg {
+  width: 100%;
+  vertical-align: middle;
+  border-radius: 8px;
+  background-color: var(--text-white);
+}
+
+.section.wheretofind div:nth-child(3) h3 {
+  color: #0074AF;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 24px;
+  margin-top: 35px;
+}
