--- a/styles/styles.css
+++ b/styles/styles.css
@@ -317,20 +317,18 @@ main .section.highlight {
 
 .section.wheretofind li {
   width: 33.3333%;
+  border-radius: 8px;
+  background-color: var(--text-white);
+  margin: 0 12px;
 }
 
 .section.wheretofind ul li .icon {
   width: 333px;
   height: 100%;
-  border-radius: 8px;
-  background-color: var(--text-white);
 }
 
-.section.wheretofind ul li .icon svg {
-  width: 100%;
+.section.wheretofind ul li picture img {
   vertical-align: middle;
-  border-radius: 8px;
-  background-color: var(--text-white);
 }
 
 .section.wheretofind div:nth-child(3) h3 {
@@ -339,4 +337,9 @@ main .section.highlight {
   font-size: 16px;
   line-height: 24px;
   margin-top: 35px;
+}
+
+.section.wheretofind > div:nth-child(3){
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
