Fix the where to find and buttons for mobile

--- a/blocks/find-flumist/find-flumist.css
+++ b/blocks/find-flumist/find-flumist.css
@@ -87,5 +87,16 @@
   }
 }
 
+@media (max-width: 900px) {
+  .form-group {
+    margin-bottom: 15px;
+  }
+
+  .find-flumist-form > div:nth-child(3) {
+    margin-top: 30px;
+    margin-bottom: -5px;;
+  }
+}
+
 
 
