Make a link out of the footer image

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -112,6 +112,16 @@ footer .footer p {
   border-bottom: 2px solid #fff;
 }
 
+.footer li > a:any-link {
+  text-decoration: none;
+  border-bottom: 0;
+}
+
+.footer li > a:hover {
+  text-decoration: none;
+  border-bottom: 0;
+}
+
 @media (min-width: 900px){
   .footer {
     padding-bottom: 50px;
