--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -1,3 +1,11 @@
+.section > div.columns-wrapper {
+  margin-bottom: 70px;
+}
+
+.home .section > div.columns-wrapper {
+  margin-bottom: 0;
+}
+
 .columns > div {
   display: flex;
   flex-direction: column;
@@ -7,7 +15,8 @@
   width: 100%;
 }
 
-.columns.large img {
+.columns.large img,
+.columns.large p.picture {
   max-width: unset;
 }
 
@@ -40,7 +49,7 @@
   .columns > div {
     align-items: center;
     flex-direction: unset;
-    gap: 32px;
+    gap: 24px;
   }
 
   .columns > div > div {
@@ -49,12 +58,14 @@
   }
 
   .columns p,
-  .columns img {
+  .columns img,
+  .columns ul,
+  .columns h2 {
     max-width: 511px;
   }
 }
 
-.columns {
+.home .columns {
   max-width: 1046px;
   margin:auto;
 }
@@ -63,16 +74,33 @@
   max-width: 1260px;
 }
 
-.columns.large p {
+.home .columns.large p {
   font-size: var(--body-font-size-l);
   margin-top: 40px;
   margin-bottom: 40px;
 }
 
-.columns li {
-  list-style: none;
-  padding-inline-start: 0;
-  font-size: var(--body-font-size-xs);
+.columns ul {
+  list-style-type: none;
+  font-size: var(--body-font-size-s);
+  padding-left: 18px;
+}
+
+.columns ul li {
+  position: relative;
+  padding-bottom: 15px;
+}
+
+.columns ul li::before {
+  content: '';
+  width: 6px;
+  height: 6px;
+  position: absolute;
+  background-color: var(--text-blue);
+  border-radius: 4px;
+  top: 10px;
+  margin-left: -15px;
+  box-sizing: border-box;
 }
 
 .columns.large a.button:any-link {
@@ -152,11 +180,11 @@
   position: relative;
 }
 
-.columns.spray .columns-img-col {
+.columns.spray > div > div:last-of-type {
   position: relative;
 }
 
-.columns.spray .columns-img-col picture:last-of-type img {
+.columns.spray > div > div:last-of-type picture:last-of-type img {
   width: 342px;
   height: 249px;
   position: absolute;
@@ -164,8 +192,59 @@
   right: -145px;
 }
 
+.about .columns.spray > div > div:last-of-type picture:last-of-type img {
+  bottom: 32px;
+  right: -120px;
+}
+
 @media (max-width: 900px) {
   .columns.spray .columns-img-col picture:last-of-type img {
     display: none;
   }
+}
+
+.imgH4P {
+  display: grid;
+  grid-template:
+  'picture h4'
+  'picture p';
+  grid-template-columns: 133px 1fr;
+  height: 100px;
+}
+
+.imgH4P p.picture {
+  grid-area: picture;
+  margin: 0;
+  width: 120px;
+}
+
+.imgH4P h4 {
+  grid-area: h4;
+  margin: 0;
+  align-self: end;
+  font-size: 20px;
+  padding-bottom: 5px;
+}
+
+.imgH4P p:not(.picture) {
+  grid-area: p;
+  margin: 0;
+  font-size: 14px;
+}
+
+.imgH4P:nth-of-type(1) h4 {
+  color: var(--text-pink);
+}
+
+.imgH4P:nth-of-type(2) {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.imgH4P:nth-of-type(2) h4 {
+  color: var(--text-green);
+}
+
+.imgH4P:nth-of-type(3) h4 {
+  color: var(--text-blue);
 }
