--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -15,7 +15,7 @@
   width: 100%;
 }
 
-.imh-h4-p p.picture {
+.img-h4-p p.picture {
   grid-area: picture;
   margin: 0;
   width: 120px;
@@ -86,7 +86,7 @@
   color: var(--text-color);
 }
 
-.imh-h4-p p:not(.picture) {
+.img-h4-p p:not(.picture) {
   grid-area: p;
   margin: 0;
   font-size: 14px;
@@ -248,7 +248,7 @@
   }
 }
 
-.imh-h4-p {
+.img-h4-p {
   display: grid;
   grid-template:
   'picture h4'
@@ -257,7 +257,7 @@
   height: 100px;
 }
 
-.imh-h4-p h4 {
+.img-h4-p h4 {
   grid-area: h4;
   margin: 0;
   align-self: end;
@@ -265,19 +265,19 @@
   padding-bottom: 5px;
 }
 
-.imh-h4-p:nth-of-type(1) h4 {
+.img-h4-p:nth-of-type(1) h4 {
   color: var(--text-pink);
 }
 
-.imh-h4-p:nth-of-type(2) {
+.img-h4-p:nth-of-type(2) {
   padding-top: 15px;
   padding-bottom: 15px;
 }
 
-.imh-h4-p:nth-of-type(2) h4 {
+.img-h4-p:nth-of-type(2) h4 {
   color: var(--text-green);
 }
 
-.imh-h4-p:nth-of-type(3) h4 {
+.img-h4-p:nth-of-type(3) h4 {
   color: var(--text-blue);
 }
