--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -78,6 +78,7 @@
 
 .columns.large {
   max-width: 1260px;
+  margin-top: 35px;
 }
 
 .columns.safety p {
@@ -90,6 +91,13 @@
   grid-area: p;
   margin: 0;
   font-size: 14px;
+}
+
+.columns.large h1+p {
+  font-size: 20px;
+  line-height: 28px;
+  margin:0;
+  color: #231F20;
 }
 
 .home .columns.large p {
@@ -139,6 +147,11 @@
   display: flex;
   align-items: flex-end;
   justify-content: center;
+}
+
+.columns.large > div {
+  align-items: start;
+  gap: 40px;
 }
 
 .columns.safety > div {
@@ -241,20 +254,11 @@
   right: -120px;
 }
 
-.columns.large {
-  margin-top: 35px;
-}
-
 .columns.large > div > div:nth-child(2){
   top: 150px;
   position: sticky;
   opacity: 1;
   animation: fade 2s linear
-}
-
-.columns.large > div {
-  align-items: start;
-  gap: 40px;
 }
 
 .columns.large h1 {
@@ -264,22 +268,34 @@
   margin-bottom: 20px;
 }
 
-.columns.large h1+p {
-  font-size: 20px;
-  line-height: 28px;
-  margin:0;
-  color: #231F20;
-}
-
 .columns.large ul {
   margin:0;
   padding:0;
   margin-top:30px;
 }
 
+.columns.large ul li::before {
+  background-image: url("/icons/deco.png");
+  background-repeat: no-repeat;
+  left: -22px;
+  content: '';
+  position: absolute;
+  top: -17px;
+  width: 56px;
+  height: 43px;
+}
+
+.columns.large ul li {
+  background-color: var(--text-white);
+  border-radius: 8px;
+  margin-bottom: 25px;
+  padding: 24px 40px 20px;
+  position: relative;
+  max-width: 431px;
+}
+
 .columns.large.cards ul:nth-of-type(1) li {
   margin:0;
-  padding:0;
   background-color: pink;
   border-radius: 8px;
   padding: 19px 16px;
@@ -325,38 +341,15 @@
   color: var(--text-white);
   align-content: end;
   left: calc(100% - 140px);
-
   position: relative;
   font-size: 16px;
   line-height: 16px;
   letter-spacing: -0.16px;
   font-weight: bold;
-
   background-image: url("/icons/white-arrow-right.svg");
   background-repeat: no-repeat;
   background-position: center right;
   padding-right: 25px;
-}
-
-.columns.large ul li {
-  background-color: pink;
-  background-color: #FFFFFF;
-  border-radius: 8px;
-  margin-bottom: 25px;
-  padding: 24px 40px 20px;
-  position: relative;
-  max-width: 431px;
-}
-
-.columns.large ul li::before {
-  background-image: url("/icons/deco.png");
-  background-repeat: no-repeat;
-  left: -22px;
-  content: '';
-  position: absolute;
-  top: -17px;
-  width: 56px;
-  height: 43px;
 }
 
 @media (min-width: 900px) {
