--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -15,6 +15,12 @@
   width: 100%;
 }
 
+.columns p > em:only-child,
+.columns div > em:only-child {
+  font-size: var(--body-font-size-xs);
+  font-style: normal;
+}
+
 .img-h4-p p.picture {
   grid-area: picture;
   margin: 0;
@@ -52,6 +58,18 @@
 }
 
 @media (min-width: 900px) {
+  .columns p:not(.picture) {
+    max-width: 404px;
+  }
+
+  .isi-fragment .columns p:not(.picture) {
+    max-width: unset;
+  }
+
+  .isi-fragment .columns > div > div:last-of-type {
+    padding-left: 10px;
+  }
+
   .columns > div {
     align-items: center;
     flex-direction: unset;
@@ -63,17 +81,11 @@
     order: unset;
   }
 
-  .columns p,
   .columns img,
   .columns ul,
   .columns h2 {
     max-width: 511px;
   }
-}
-
-.home .columns {
-  max-width: 1046px;
-  margin:auto;
 }
 
 .columns.large {
@@ -93,13 +105,6 @@
   font-size: 14px;
 }
 
-.columns.large h1+p {
-  font-size: 20px;
-  line-height: 28px;
-  margin:0;
-  color: #231F20;
-}
-
 .home .columns.large p {
   font-size: var(--body-font-size-l);
   margin-top: 40px;
@@ -110,6 +115,10 @@
   list-style-type: none;
   font-size: var(--body-font-size-s);
   padding-left: 18px;
+}
+
+.isi-fragment .columns ul {
+  font-size: var(--body-font-size-xs);
 }
 
 .columns ul li {
@@ -142,9 +151,8 @@
 }
 
 .columns.safety {
-  max-width: 1260px;
+  max-width: 1046px;
   margin: auto;
-  display: flex;
   align-items: flex-end;
   justify-content: center;
 }
@@ -157,7 +165,7 @@
 .columns.safety > div {
   align-items: start;
   flex-direction: unset;
-  gap: 32px;
+  gap: 0;
   border-top: 1px solid #BABABA;
   padding-top: 30px;
   margin-bottom: 30px;
@@ -263,7 +271,7 @@
 
 .columns.large h1 {
   line-height: 56px;
-  font-size: 48px;
+  font-size: var(--heading-font-size-xxl);
   letter-spacing: -1.54px;
   margin-bottom: 20px;
 }
