--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,7 +59,7 @@
   --body-font-size-xs: 12px;
 
   /* heading sizes */
-  --heading-font-size-xxl: 40px;
+  --heading-font-size-xxl: 48px;
   --heading-font-size-xl: 40px;
   --heading-font-size-m: 16px;
   --heading-font-size-s: 14px;
@@ -136,6 +136,14 @@ h1 {
   letter-spacing: -1.79px;
 }
 
+.large h1 + p {
+  line-height: 28px;
+}
+
+.home .large h1 + p {
+  line-height: 36px;
+}
+
 h2 { 
   font-size: var(--heading-font-size-xl);
   letter-spacing: -1.54px;
@@ -198,7 +206,7 @@ a:hover {
 
 /* buttons */
 .button-container {
-  margin-top: 40px;
+  margin-top: 30px;
 }
 
 a.button:any-link, button {
@@ -313,6 +321,8 @@ main .section.highlight {
 .section.wheretofind {
     max-width: 1046px;
     margin: 0 auto;
+    padding-top: 65px;
+    padding-bottom: 10px;
 }
 
 .section.wheretofind .default-content-wrapper {
