--- a/blocks/find-flumist/find-flumist.css
+++ b/blocks/find-flumist/find-flumist.css
@@ -10,10 +10,6 @@
  * governing permissions and limitations under the License.
  */
 
-.form-group {
-  display: inline-block;
-}
-
 .form-group select {
   background: url("/icons/arrow-large.svg") no-repeat;
   background-position: 94% 50%;
@@ -66,6 +62,22 @@
   margin-left: 16px;
   display: block;
   text-align: left;
+}
+
+@media (min-width: 600px) {
+  .form-group {
+    display: inline-block;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 900px) {
+  .form-control {
+      width: calc(38vw - 30px);
+  }
+
+  .form-group:not(:first-of-type) {
+    margin-left: 15px;
+  }
 }
 
 @media (min-width: 900px) {
