--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,6 +57,7 @@
   --body-font-size-m: 16px;
   --body-font-size-s: 14px;
   --body-font-size-xs: 12px;
+  --body-font-size-xxs: 12px;
 
   /* heading sizes */
   --heading-font-size-xxl: 48px;
@@ -64,6 +65,7 @@
   --heading-font-size-m: 16px;
   --heading-font-size-s: 14px;
   --heading-font-size-xs: 12px;
+    --body-font-size-xxs: 12px;
 
   /* nav */
   --nav-height: 108px;
@@ -81,6 +83,7 @@
     --body-font-size-m: 20px;
     --body-font-size-s: 16px;
     --body-font-size-xs: 14px;
+    --body-font-size-xxs: 12px;
     --nav-height: 105px;
   }
 
@@ -88,6 +91,12 @@
     --heading-font-size-xxl: 56px;
     --heading-font-size-xl: 48px;
     --heading-font-size-m: 20px;
+  }
+}
+
+@media (max-width: 900px) {
+  .home {
+    --heading-font-size-xxl: 40px;
   }
 }
 
@@ -399,6 +408,11 @@ main .section.highlight {
 
   .section.wheretofind li {
     width: 100%;
-    margin-bottom: 7px;
+    max-width: 340px;
+    margin: 0 auto 7px;
+  }
+
+  .section.wheretofind > div:nth-child(3){
+    margin-bottom: 25px;
   }
 }
