--- a/styles/styles.css
+++ b/styles/styles.css
@@ -415,3 +415,83 @@ main .section.highlight {
     margin-bottom: 25px;
   }
 }
+
+@media (min-width: 900px) {
+  .embed-placeholder {
+    width: 511px;
+    height: 345px;
+  }
+}
+
+main .embed {
+  width: unset;
+  text-align: center;
+  /*max-width: 511px;*/
+  /*margin: 32px auto;*/
+}
+
+main .embed > div {
+  display: flex;
+  justify-content: center;
+  max-width: 511px;
+}
+
+main .embed-placeholder {
+  /*width: 100%;*/
+  aspect-ratio: 16 / 9;
+  position: relative;
+}
+
+main .embed-placeholder > * {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+main .embed-placeholder picture img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+main .embed-placeholder picture::before {
+  content: '';
+  background-image: url("/icons/video-play-button.png");
+  background-color: transparent;
+  width: 77px;
+  height: 40px;
+  position: absolute;
+  bottom: 13px;
+  right: 64px;
+}
+
+main .embed-placeholder-play button {
+  box-sizing: border-box;
+  position: relative;
+  display: block;
+  transform: scale(3);
+  width: 22px;
+  height: 22px;
+  border: 2px solid;
+  border-radius: 20px;
+  padding: 0;
+}
+
+main .embed-placeholder-play button::before {
+  content: "";
+  display: block;
+  box-sizing: border-box;
+  position: absolute;
+  width: 0;
+  height: 10px;
+  border-top: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+  border-left: 6px solid;
+  top: 4px;
+  left: 7px;
+}
