--- a/styles/styles.css
+++ b/styles/styles.css
@@ -326,6 +326,50 @@ main .section.highlight {
   background-color: var(--highlight-background-color);
 }
 
+main .embed-youtube > div {
+  display: flex;
+  justify-content: center;
+  max-width: 511px;
+}
+
+main .embed-youtube {
+  width: unset;
+  text-align: center;
+}
+
+main .embed-placeholder {
+  aspect-ratio: 16 / 9;
+  position: relative;
+}
+
+main .embed-placeholder > * {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+main .embed-placeholder picture img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+main .embed-placeholder picture::before {
+  content: '';
+  background-image: url("/icons/video-play-button.png");
+  background-color: transparent;
+  width: 77px;
+  height: 40px;
+  position: absolute;
+  bottom: 13px;
+  right: 64px;
+}
+
 .section.wheretofind {
     max-width: 1046px;
     margin: 0 auto;
@@ -413,5 +457,12 @@ main .section.highlight {
 
   .section.wheretofind > div:nth-child(3){
     margin-bottom: 25px;
+  }
+}
+
+@media (min-width: 900px) {
+  .embed-placeholder {
+    width: 511px;
+    height: 345px;
   }
 }
