--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,6 +45,8 @@
   --text-blue: #0074AF;
   --text-pink: #A60063;
   --button-bg-color: #0071B7;
+  --button-container-bg-color: #C0E1F0;
+  --button-container-color: #5D5E60;
   --footer-bg-color: #1B1B1B;
 
   /* fonts */
@@ -77,7 +79,7 @@
 @media (min-width: 900px) {
   :root {
     --heading-font-size-xxl: 48px;
-    --heading-font-size-xl: 40px;
+    --heading-font-size-xl: 48px;
     --body-font-size-l: 24px;
     --body-font-size-m: 20px;
     --body-font-size-s: 16px;
@@ -162,8 +164,8 @@ h4 { font-size: var(--heading-font-size-s) }
 }
 
 p, dl, ol, ul, pre, blockquote {
-  margin-top: 22px;
-  margin-bottom: 22px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .large h1 + p {
@@ -231,6 +233,27 @@ a.button:any-link, button {
   cursor: pointer;
   white-space: nowrap;
   overflow: hidden;
+}
+
+.primary-button-box {
+  background-color: var(--button-container-bg-color);
+  font-size: 16px;
+  color: var(--button-container-color);
+  max-width: 574px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 8px;
+  padding: 27px 0;
+  margin: 0 auto;
+}
+
+.columns .primary-button-box {
+  margin: 0;
+}
+
+.primary-button-box p {
+  margin: 0 15px;
 }
 
 @media (max-width: 900px) {
