--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -58,12 +58,16 @@
 }
 
 @media (min-width: 900px) {
-  .columns p:not(.picture) {
+  .columns h1 + p:not(.picture) {
+    max-width: unset;
+  }
+
+  .columns.pink p:not(.picture) {
     max-width: 404px;
   }
 
-  .columns h1 + p:not(.picture) {
-    max-width: unset;
+  .columns.green p:not(.picture) {
+    max-width: 404px;
   }
 
   .columns > div {
@@ -167,7 +171,6 @@
 
 .columns.large > div {
   align-items: start;
-  gap: 40px;
 }
 
 .columns.safety > div {
@@ -179,6 +182,17 @@
   margin-bottom: 30px;
 }
 
+.home .section > div {
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+.home .columns.spray > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .columns.safety > div >div:nth-child(1) {
   width: 520px; /* TODO fix */
 }
@@ -187,6 +201,11 @@
   font-size: 14px;
   line-height: 14px;
   margin-bottom: 10px;
+}
+
+.home .columns.spray .button-container strong {
+  font-size: 16px;
+  font-weight: normal;
 }
 
 .columns.safety > div > div:nth-child(1) > p {
@@ -450,4 +469,93 @@
 .about-flu div.columns-container:first-of-type .columns > div > div:first-of-type p.picture img {
   height: 72px;
   width: auto;
+}
+
+
+
+.home .columns.spray {
+  margin-top:0;
+}
+
+.home .columns.spray > div > div.columns-img-col {
+  top: 0;
+}
+
+.home .columns.spray > div > div h1 {
+  margin-top: 20px;
+  margin-bottom: 21px;
+  font-size: 40px;
+  line-height: 44px;
+  letter-spacing: -1.28px;
+  font-weight: bold;
+}
+
+.home .columns.spray > div > div h1 em {
+  font-style: normal;
+  white-space: nowrap;
+}
+
+.home .columns.spray > div > div h1+p {
+  font-size: 20px;
+  line-height: 28px;
+  padding: 0;
+  margin: 0;
+}
+
+.home .columns.spray .button-container {
+  margin-top: 35px;
+  margin-bottom: 0;
+  line-height: 22px;
+  font-size: 16px;
+}
+
+.home .columns.spray .button-container+p {
+  font-size: 16px;
+  line-height: 24px;
+  margin-top: 40px;
+  margin-bottom: 0;
+}
+
+.home .columns.spray .button-container+p em {
+  font-size: 16px;
+  line-height: 24px;
+  white-space: nowrap;
+}
+
+@media (min-width: 900px){
+  .home .section > div {
+    padding: 0;
+  }
+
+  .home .columns.spray > div > div {
+    width: 618px;
+  }
+
+  .home .columns.spray > div > div h1 {
+    margin-top:0;
+    font-size: 56px;
+    line-height: 60px;
+    letter-spacing: -1.79px;
+    margin-bottom: 44px;
+  }
+
+  .home .columns.spray > div > div h1+p {
+    max-width: 511px;
+    font-size: 24px;
+    line-height: 36px;
+  }
+
+  .home .columns.spray .button-container {
+    margin-top: 55px;
+  }
+
+  .home .columns.spray .button-container+p {
+    font-size: 20px;
+    line-height: 28px;
+  }
+
+  .home .columns.spray .button-container+p em {
+    font-size: 20px;
+    line-height: 28px;
+  }
 }
