--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -1,5 +1,7 @@
 .section > div.columns-wrapper {
   margin-bottom: 70px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .home .section > div.columns-wrapper {
@@ -482,7 +484,7 @@
   max-height: 450px;
 }
 
-.about .columns-container > div:first-of-type .columns > div {
+.about .columns-container:first-of-type > div:first-of-type .columns > div {
   flex-direction: row-reverse;
 }
 
