--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,7 @@
  * governing permissions and limitations under the License.
  */
 
+ /* optimize CLS */
  @font-face {
   font-family: 'Open Sans';
   font-style: normal;
@@ -218,7 +219,6 @@ a:hover {
   color: var(--link-hover-color);
 }
 
-/* buttons */
 .button-container {
   margin-top: 30px;
 }
