--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -409,6 +409,22 @@
     opacity: 1;
     animation: fade 2s linear
   }
+
+  .about-flu .columns.large > div > div:nth-child(1) {
+    top: 0;
+    position: relative;
+    opacity: 1;
+    animation: fade 2s linear
+  }
+
+  .about-flu .columns.pink > div {
+    flex-direction: column-reverse;
+  }
+
+  .about-flu .columns.pink > div > div:nth-child(1) {
+    top: 0;
+    position: relative;
+  }
 }
 
 .img-h4-p {
@@ -488,7 +504,7 @@
   max-height: 450px;
 }
 
-.key-facts .columns-container > div:nth-child(2) > div > div > div:first-of-type {
+.key-facts .columns-container:not(.isi-fragment) > div:nth-child(2) > div > div > div:first-of-type {
   transform: translateY(-100px);
 }
 
@@ -498,6 +514,12 @@
 
 .about-flu .columns-container:first-of-type > div:first-of-type .columns > div {
   flex-direction: row-reverse;
+}
+
+@media (max-width: 900px) {
+  .about-flu .columns-container:first-of-type > div:first-of-type .columns > div {
+    flex-direction: column-reverse;
+  }
 }
 
 .about-flu div.columns-container:first-of-type h3 {
